# 1Pass

./: .gitignore  .prettierignore  README.md  global.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: artifacts-to-release.yml  publish.yml  test-on-pr.yml
Components/: LoadingPage.tsx  card_layout.tsx  layout.tsx  navbar.tsx  themeswitch.tsx
Components/BaseComponents/: add_btn.tsx  card.tsx  card_remove_btn.tsx  layout.tsx  navbar.tsx  news.tsx  splash.tsx
Components/Modals/: AddSecretModal.tsx  EmptySecretsOrNotLoggedInModal.tsx
Components/Settings/: themeswitch.tsx
pages/: _app.tsx  about.tsx  home.tsx  index.tsx  login.tsx  profile.tsx  register.tsx  settings.tsx  shared.tsx
pages/About/: about.tsx
pages/Home/: home.tsx
pages/Profile/: profile.tsx
pages/Settings/: settings.tsx
pages/api/: api.ts
pages/api/auth/: [...nextauth].ts  auth.ts
pages/api/invoke/: useInvoke.ts
pages/api/models/: auth.object.ts  secret.object.ts
pages/api/secret/: secret.ts
pages/misc/: completedRegistration.tsx
src-tauri/: Cargo.toml  config.toml  example.env  tauri.conf.json
src-tauri/migrations/2023-05-14-164743_create_identity/: up.sql
src-tauri/migrations/2023-06-06-210344_create_secrets/: up.sql
src-tauri/migrations/2023-06-07-090206_create_news/: up.sql
src-tauri/src/: appstate.rs  encryption.rs  lib.rs  main.rs  schema.rs  utils.rs
src-tauri/src/db/: commands.rs  database.rs  encryption.rs  mod.rs  models.rs
src-tauri/src/db/domain/: mod.rs
src-tauri/src/db/domain/auth/: JwtToken.rs  UserObject.rs  jwt_token.rs  mod.rs  user_object.rs
src-tauri/src/db/domain/news/: mod.rs  news_object.rs
src-tauri/src/db/domain/secret/: SecretObject.rs  mod.rs  secret_object.rs
src-tauri/src/db/handlers/: mod.rs
src-tauri/src/db/handlers/news/: news_handler.rs
src-tauri/src/db/handlers/secret/: secret_handler.rs
src-tauri/src/utils/: config.rs
src-tauri/tests/: auth_tests.rs  encryption_tests.rs  mod.rs  secret_tests.rs  testclient.rs
src-tauri/tests/authorization/: auth_tests.rs
src-tauri/tests/clients/: test_client.rs
src-tauri/tests/encryption/: encryption_tests.rs
src-tauri/tests/secret_handling/: secret_tests.rs
styles/: Home.module.css  globals.css
