[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["api-all"] }
argon2 = "0.5"
magic-crypt = "3.1.12"
rand = "0.8.5"
lazy-init = "0.5.1"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
keyring = "2"
dotenv = "0.15.0"
once_cell = "1.15.0"
futures = "0.3.28"
chrono = "0.4.24"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
getrandom = "0.2"
base64 = "0.21.2"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
